tests/k8s/1-001_validate_basic/02-ingress-available.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  labels:
    example: ingress
  name: example-argocd
spec:
  server:
    grpc:
      ingress:
        enabled: true
    ingress:
      enabled: true
    insecure: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-argocd-server
spec:
  rules:
  - host: argocd
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argocd
    secretName: argocd-secret
