tests/k8s/1-001_validate_basic/01-assert.yaml
# Increase the timeout for the first test because it needs to download
# a number of container images
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 720
---
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: example-argocd
status:
  phase: Available
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-argocd-application-controller
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-argocd-dex-server
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-argocd-redis
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-argocd-repo-server
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-argocd-server
status:
  readyReplicas: 1
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: example-argocd-argocd-application-controller
---
kind: ServiceAccount
apiVersion: v1
metadata:
  name: example-argocd-argocd-server
---
kind: ServiceAccount
apiVersion: v1
metadata:
  name: example-argocd-argocd-redis-ha
---
kind: ServiceAccount
apiVersion: v1
metadata:
  name: example-argocd-argocd-dex-server
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: example-argocd-argocd-application-controller
---
kind: RoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: example-argocd-argocd-server
---
kind: RoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: example-argocd-argocd-redis-ha
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: example-argocd-argocd-dex-server
