tests/k8s/1-001_validate_basic/02-assert.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: example-argocd
status:
  phase: Available
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-argocd-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-argocd-grpc
