tests/k8s/1-001_validate_basic/05-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 720
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-argocd-applicationset-controller
status:
  readyReplicas: 1
kind: ServiceAccount
apiVersion: v1
metadata:
  name: example-argocd-argocd-applicationset-controller
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: example-argocd-argocd-applicationset-controller
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: example-argocd-argocd-applicationset-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-argocd-applicationset-controller
spec:
  rules:
  - host: example-argocd
    http:
      paths:
      - backend:
          service:
            name: example-argocd-applicationset-controller
            port:
              name: webhook
        path: /api/webhook
        pathType: ImplementationSpecific
