tests/k8s/1-001_validate_basic/07-errors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-argocd-applicationset-controller
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: example-argocd-applicationset-controller
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: example-argocd-applicationset-controller
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: example-argocd-applicationset-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-argocd-applicationset-controller
